# graphql_ppx

./: .bazelignore  .gitignore  BUILD.bazel  README-O1.md  WORKSPACE.bazel
bzl/: obazl.edn  opam.bzl
bzl/ppx/: BUILD.bazel
bzl/ppx/exe/: BUILD.bazel
bzl/tools/: user.bazelrc.tpl  wss
discover/: README.bazel.md  discover.ml
src/base/: BUILD.bazel  multi_visitor.ml  read_schema.ml
src/bucklescript/: BUILD.bazel  graphql_ppx.ml  output_bucklescript_decoder.ml  output_bucklescript_encoder.ml  output_bucklescript_module.ml  output_bucklescript_unifier.ml
src/native/: BUILD.bazel  BUILD.bzl  graphql_ppx.ml  output_native_decoder.ml  output_native_encoder.ml  output_native_module.ml  output_native_unifier.ml
tests_native/: BUILD.bazel  BUILD.bzl  dune
